背景画像調整、gifいれようとした、googlemap

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="ja">
   <div id="loader">
       <div class="spinner">
-        <div class="cube1"><img src="/assets/images/logo.png" class="loadimg"></div>
+        <div class="cube1"><img src="/assets/images/logo.png" class="loadimg" ></div>
         <div class="cube2"></div>
       </div>
   </div>
@@ -44,7 +44,16 @@
       
         <div class="yield-main">
           <%= yield %>
+
+          <div class="note">
+            <h2>お知らせ</h2>
+            <ul>
+              
+
+            </ul>
+          </div>
         </div>
+      
     
   </body>
   <footer style="background-color: rgb(24, 22, 22);" >
@@ -53,7 +62,7 @@
       </div>
       <div class="footer_icon_div">
         <div class="icon">
-          <i class="fab fa-twitter fa-4x"></i>
+          <i class="fab fa-twitter fa-4x" href="https://x.com/koyo_onten2023?s=20"></i>
         </div>
         <div class="icon">
           <i class="fab fa-instagram fa-4x" ></i>
