--- a/views/message.erb
+++ b/views/message.erb
@@ -1,3 +1,19 @@
+<script src="/assets/javascript/message.js"></script>
+
 <div class="message-main">
-  <img src="/assets/images/message.png" class="title-img">
+  <img src="/assets/images/messages.png" class="title-img">
+</div>
+<div class="messagemain">
+  <div class="message">
+    <h1 class="message-h1">あいさつ</h1>
+    <p class="message-p" > 日露戦争前夜の1903年、第５回内国勧業博覧会が大阪で開催され
+    ました。それまでの同博覧会が物品を集めてＰＲするだけの催しだ
+    ったのに対して、第５回では日本初のメリーゴーラウンドや急流す
+    べりが登場するなど行楽の場としての魅力が発信されました。結果
+    、過去最多の入場者数を達成する盛会となったそうです。まさに
+    “New ERA”の到来を暗示する博覧会となり、その跡地は「新世界」と
+    呼ばれる歓楽地として発展しました。<br>今回の音展、生徒たちが選んだテーマは“New ERA”。はたして皆
+    さんに“the dawn of a new era”を感じていただけるでしょうか。
+    </p>
+  </div>
 </div>
