--- a/public/assets/css/access.css
+++ b/public/assets/css/access.css
@@ -1,3 +1,13 @@
+
+.access-main{
+  width:95%;
+  margin:0 auto;
+}
+.title-img{
+  height: 280px;
+  width: 560px;
+}
+
 #display_content > div {
     width: 100%;
     height: 100%;
