--- a/views/access.erb
+++ b/views/access.erb
@@ -1,6 +1,9 @@
 <script src="/assets/javascript/access.js"></script>
+
 <div class="accessmain">
-  
+  <div class="access-main">
+  <img src="/assets/images/access.png" class="title-img">
+  </div>
   <div class="googlemap">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.828649975743!2d135.31588377649183!3d34.75990897289869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000f36ab1b8e56b%3A0x41b0ac08629de653!2z55Sy6Zm95a2m6Zmi6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1694713840280!5m2!1sja!2sjp" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe>
