--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,13 @@
+    <script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
     <div id="wrapper">
       <div class="image">
       <img src="/assets/images/logo.png" class="logo">
@@ -18,4 +28,30 @@
     <span id="countdown"></span>
     </div>
 </div>
+
+<div class="note">
+  <h2>お知らせ</h2>
+  <h1>呼び出し・問い合わせ</h1>
+  <ul>
+    <li> 放送によるお呼び出しは北館一階西寄りの放送室前で受け付けています。<br>
+     ご不明な点がございましたら、受付でお尋ねください。 
+    </li>
+  </ul>
+  <h1>呼び出し・問い合わせ</h1>
+  <ul>
+    <li>      
+    </li>
+  </ul>
+  <h1>呼び出し・問い合わせ</h1>
+  <ul>
+    <li>      
+    </li>
+  </ul>
+  <h1>呼び出し・問い合わせ</h1>
+  <ul>
+    <li>      
+    </li>
+  </ul>
+</div>
+
 </div>
