--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,6 +100,7 @@ html,body{
   background-image: url(/assets/images/realtimebackground.png);
   background-size: cover;
   position: relative;
+  padding-right:100px;
 }
 #countdown{
   font-family:'mega', sans-serif;
@@ -119,3 +120,30 @@ html,body{
 
 /* ここまで */
 
+.note{
+  font-family: "makinas-4-square";
+  color:white;
+}
+.note h2{
+  text-align: center;
+    font-weight: 700;
+    font-size: 3rem;
+    font-family: "makinas-4-square";
+}
+.note ul li{
+  margin-bottom: 10px;
+  font-family: "makinas-4-square";
+}
+.note ul{
+  padding: 30px 0;
+  font-family: "makinas-4-square";
+}
+.note h1{
+  text-align: left;
+    font-size: 1.2rem;
+    font-family: "makinas-4-square";
+}
+.index-main{
+  width:70%;
+  margin:0 auto;
+}
