--- a/views/access.erb
+++ b/views/access.erb
@@ -4,10 +4,21 @@
   <div class="access-main">
   <img src="/assets/images/access.png" class="title-img">
   </div>
+  <ul style="text-align:center" class="access-text">
+      <li>阪急電鉄「甲陽園」駅下車、徒歩約20分</li>
+      <li>阪急/阪神バス「柏堂町」駅下車、南へ徒歩約5分</li>
+      <li>阪急バス「苦楽園」駅下車、徒歩約15分</li>
+  </ul>
+  <ul class="access-text">
+      <li>校内への車の乗り入れは全面禁止にしております</li>
+      <li>学校周辺はすべて駐車禁止ですので、公共の交通機関をご利用ください </li>
+      <li> 例年、北山緑化植物園より「利用者が駐車できない」との苦情があります。植物園への駐車もご遠慮ください </li>
+  </ul>
   <div class="googlemap">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.828649975743!2d135.31588377649183!3d34.75990897289869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000f36ab1b8e56b%3A0x41b0ac08629de653!2z55Sy6Zm95a2m6Zmi6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1694713840280!5m2!1sja!2sjp" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe>
   </div>
+
 <div class="buttons">
   <div class="button" id="button_bus" onclick="button_pushed('bus')">
     <span>バス</span>
@@ -16,6 +27,7 @@
     <span>電車</span>
   </div>
 </div>
+
 <div id="display_content">
   <div id="content_bus">
   <div class="each-bus">
