--- a/views/map.erb
+++ b/views/map.erb
@@ -17,7 +17,11 @@
         <h1 class="map-title">校内地図</h1>
         <div class="map">
             <div class="map-image">
-                <div id="map-content1" class="map-content" style="display: block;"><img src="/assets/images/map/1.webp" class="each-map"></div>
+                <div id="map-content1" class="map-content" style="display: block;">
+                <div class="map-"><img src="/assets/images/map/1.webp" class="each-map">
+                </div>
+                
+                
                 <div id="map-content2" class="map-content">コンテンツ2</div>
                 <div id="map-content3" class="map-content">コンテンツ3</div>
                 <div id="map-content4" class="map-content">コンテンツ4</div>
