--- a/views/message.erb
+++ b/views/message.erb
@@ -1,5 +1,14 @@
 <script src="/assets/javascript/message.js"></script>
-
+<script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
 <div class="message-main">
   <img src="/assets/images/messages.png" class="title-img">
 </div>
@@ -7,12 +16,12 @@
   <div class="message">
     <h1 class="message-h1">あいさつ</h1>
     <p class="message-p" > 日露戦争前夜の1903年、第５回内国勧業博覧会が大阪で開催され
-    ました。それまでの同博覧会が物品を集めてＰＲするだけの催しだ
-    ったのに対して、第５回では日本初のメリーゴーラウンドや急流す
-    べりが登場するなど行楽の場としての魅力が発信されました。結果
+    ました。<br>それまでの同博覧会が物品を集めてＰＲするだけの催しだ
+    ったのに対して、<br>第５回では日本初のメリーゴーラウンドや急流す
+    べりが登場するなど行楽の場としての魅力が発信されました。<br>結果
     、過去最多の入場者数を達成する盛会となったそうです。まさに
-    “New ERA”の到来を暗示する博覧会となり、その跡地は「新世界」と
-    呼ばれる歓楽地として発展しました。<br>今回の音展、生徒たちが選んだテーマは“New ERA”。はたして皆
+    “New ERA”の到来を暗示する博覧会となり、<br>その跡地は「新世界」と
+    呼ばれる歓楽地として発展しました。<br>今回の音展、生徒たちが選んだテーマは“New ERA”。<br>はたして皆
     さんに“the dawn of a new era”を感じていただけるでしょうか。
     </p>
   </div>
