一応化学部完成

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">化学部</p>
-            <a href="/kagakubu">ccccc</a>
+            <a href="/kagakubu"><img src="/assets/images/circle/kagaku.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">地歴部</p>
