サークル科学部文芸図書アンサンブル部が終わりました

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">化学部</p>
-            <a href="/kagakubu"><img src="/assets/images/circle/kagaku.png" class="circle-img"></a>
+            <a href="/kagakubu"><img src="/assets/images/circle/IMG_8290.jpg" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">地歴部</p>
@@ -33,7 +33,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">アンサンブル部</p>
-            <a href="/annsannburubu">bbbbb</a>
+            <a href="/annsannburubu"><img src="/assets/images/circle/annsannburu.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">ESS部</p>
@@ -45,7 +45,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">文芸部＆図書委員</p>
-            <a href="/bunngeibutosho">bbbbb</a>
+            <a href="/bunngeibutosho"><img src="/assets/images/circle/bunngeitosho.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">数学同好会</p>
