--- a/views/circle.erb
+++ b/views/circle.erb
@@ -17,15 +17,15 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">地歴部</p>
-            <a href="/tirekibu">ddddd</a>
+            <a href="/tirekibu"><img src="/assets/images/circle/" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">天文部</p>
-            <a href="/tennmonnbu">bbbbb</a>
+            <a href="/tennmonnbu"><img src="/assets/images/circle/" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">将棋部</p>
-            <a href="/shougibu">bbbbb</a>
+            <a href="/shougibu"><img src="/assets/images/circle/shougi.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">美術部</p>
