化学将棋物理アンサンブルess文芸部図書奇術の文面を読みやすくした

--- a/views/annsannburubu.erb
+++ b/views/annsannburubu.erb
@@ -22,6 +22,6 @@
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">アンサンブル部ルームコンサートへようこそJPOPやクラシック、少人数〜大人数の様々な演奏をお届けします！芸術棟 3F 合併教室にて生演奏でしか体験できない感動を是非！</p>
+   <p class="circle-text">アンサンブル部ルームコンサートへようこそ!JPOPやクラシック、少人数〜大人数の様々な演奏をお届けします！</p><p class="circle-text">芸術棟 3F 合併教室にて生演奏でしか体験できない感動を是非！</p>
 
 </div>
