--- a/views/bunngeibutosho.erb
+++ b/views/bunngeibutosho.erb
@@ -22,6 +22,6 @@
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">今年も文芸部と図書委員の合同です。本の紹介ポスターを展示します。部誌も配布しております。読書が好きな方、興味を持たれた方はぜひ訪れてみてください。</p>
+   <p class="circle-text">今年も文芸部と図書委員の合同です。本の紹介ポスターを展示します。部誌も配布しております。</p><p class="circle-text">読書が好きな方、興味を持たれた方はぜひ訪れてみてください。</p>
 
 </div>
