--- a/views/circle.erb
+++ b/views/circle.erb
@@ -53,11 +53,11 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">軽音同好会</p>
-            <a href="/keionndoukoukai">bbbbb</a>
+            <a href="/keionndoukoukai"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">奇術同好会</p>
-            <a href="/kizyutudoukoukai">bbbbb</a>
+            <a href="/kizyutudoukoukai"><img src="/assets/images/circle/kizyutu.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">鉄道同好会</p>
