--- a/views/essbu.erb
+++ b/views/essbu.erb
@@ -22,6 +22,6 @@
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">昨年結成したTyphonsがパワーアップして帰ってきた...‼︎今年もスピーチ、ディベート大会を開催します！もちろん、前回好評だった洋楽コンサートも！海外留学の話や甲陽生の意外な一面が知れるなど、有意義な時間になること間違いなし。IT'S NOW OR NEVER!</p>
+   <p class="circle-text">昨年結成したTyphonsがパワーアップして帰ってきた...‼︎今年もスピーチ、ディベート大会を開催します！もちろん、前回好評だった洋楽コンサートも！海外留学の話や甲陽生の意外な一面が知れるなど、有意義な時間になること間違いなし。</p><p class="circle-text">IT'S NOW OR NEVER!</p>
 
 </div>
