--- a/views/kagakubu.erb
+++ b/views/kagakubu.erb
@@ -24,6 +24,6 @@
    </div>
    <p class="circle-text">一昨年の末に部員が0人になり、廃部となっていましたが、現在では2年生4人、一年生7人の大きな部活になりました！部員それぞれの積極的な活動の記録をどうぞ見ていってください！
 
-   人類史の中で化学は人間の進化の足、いや翼となってきた。しかし、その翼でいける空は全貌が知れない。最も身近にあるものの、その空を見上げる者は少ない。ならばさぁ！　化学部と共に空へ羽ばたこう！</p>
+   人類史の中で化学は人間の進化の足、いや翼となってきた。しかし、その翼でいける空は全貌が知れない。最も身近にあるものの、その空を見上げる者は少ない。</p><p class="circle-text">ならばさぁ！　化学部と共に空へ羽ばたこう！</p>
 
 </div>
