--- a/views/shougibu.erb
+++ b/views/shougibu.erb
@@ -22,6 +22,6 @@
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">将棋部では、全く知らない人でも楽しめる将棋体験や部員にチャレンジすることができます。生徒棟3Fの日本史教室に来ない理由はありません。甲陽の藤井聡太は君だ‼️</p>
+   <p class="circle-text">将棋部では、全く知らない人でも楽しめる将棋体験や部員にチャレンジすることができます。</p><p class="circle-text">生徒棟3Fの日本史教室に来ない理由はありません。甲陽の藤井聡太は君だ‼️</p>
 
 </div>
