--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -1,9 +1,15 @@
 .time-first{
-  width: 78%;
+  width: 1100px;
   margin: auto;
   position: relative;
 }
+@media screen and (max-width: 1300px) {
+  .time-first{
+    margin-left: 100px;
+  }
+}
 .time-table {
+  width: 100%;
   box-shadow: 0px 0px 20px 20px #f0f0f0;
   /* table-layout: fixed; */
   border-collapse: collapse;
