鉄道作れず数学完成

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -49,7 +49,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">数学同好会</p>
-            <a href="/sugakudoukoukai">bbbbb</a>
+            <a href="/sugakudoukoukai"><img src="/assets/images/circle/suugaku.png" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">軽音同好会</p>
@@ -61,7 +61,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">鉄道同好会</p>
-            <a href="/tetudoudoukoukai">bbbbb</a>
+            <a href="/tetudoudoukoukai"><img src="/assets/images/circle/" class="circle-img"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">旅行同好会</p>
