--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,7 +1,7 @@
     <div class="container">
         <div class="circle_name">
             <p class="circle_p_name">PC同好会</p>
-            <a href="/pcdoukoukai">bbbbb</a>
+            <a href="/pcdoukoukai"></a>
         </div>
         <div class="circle-name">
             <p class="circle_p_name">物理部</p>
@@ -17,11 +17,11 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">地歴部</p>
-            <a href="/tirekibu"><img src="/assets/images/circle/" class="circle-img"></a>
+            <a href="/tirekibu">bbbbb</a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">天文部</p>
-            <a href="/tennmonnbu"><img src="/assets/images/circle/" class="circle-img"></a>
+            <a href="/tennmonnbu">bbbbb</a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">将棋部</p>
@@ -61,7 +61,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">鉄道同好会</p>
-            <a href="/tetudoudoukoukai"><img src="/assets/images/circle/" class="circle-img"></a>
+            <a href="/tetudoudoukoukai">bbbbb</a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">旅行同好会</p>
