--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -10,35 +10,31 @@
 }
 .time-table {
   width: 100%;
-  box-shadow: 0px 0px 20px 20px #f0f0f0;
+  /* box-shadow: 0px 0px 20px 20px whitesmoke; */
+  border-radius: 40px;
   /* table-layout: fixed; */
   border-collapse: collapse;
   word-wrap: break-word;
-  background-color: rgb(144,144,144);
   font-family: "square", sans-serif;
   font-family: "makinas-4-square";
 }
 .time-timel {
-  border-left: 1px solid whitesmoke;
   width: 25px;
   font-size:15px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: black;
+  color:whitesmoke;
   text-align: center;
-  background-color: whitesmoke;
   vertical-align: top;
   /* font-family :'Arial Narrow Bold', sans-serif; */
   font-weight: bolder;
   font-family: "makinas-4-square";
 }
 .time-timer {
-  border-right: 1px solid whitesmoke;
   width: 25px;
   font-size:15px;
   /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-  color: black;
+  color: whitesmoke;
   text-align: center;
-  background-color: whitesmoke;
   vertical-align: top;
   /* font-family :'Arial Narrow Bold', sans-serif; */
   font-weight: bolder;
@@ -51,11 +47,11 @@
   font-weight: bolder;
   text-align: center;
   background-color: rgba(0,255,255,0.765);
+  border: 1px solid rgba(0, 0, 0, 0);
   position: relative;
   width :13%
 }
 .time-event-left {
-  border: 1px  solid rgb(144,144,144);
   border-radius: 20px;
   font-size: 12px;
   font-weight: bolder;
@@ -89,16 +85,11 @@
   font-family: "makinas-4-square";
 }
 .time-nonl{
-  background-color: whitesmoke;
-  border: 1px solid whitesmoke;
-  border-right: rgb(144,144,144);
   height:60px;
   width: 4.5%;
 
 }
 .time-nonr{
-  background-color: whitesmoke;
-  border: 1px solid whitesmoke;
   height:60px;
   width: 4.5%;
 }
@@ -109,11 +100,8 @@
 }
 .time-table td{
   height: 30px;
-  border: 1px  solid rgb(144,144,144);
 }
-.time-bot{
-  border-bottom: 1px solid whitesmoke;
-}
+
 td{
   font-family: "makinas-4-square";
 }
@@ -133,7 +121,7 @@ td{
 }
 .line{
   width: 100%;
-  border-top: 1px solid #191919;
+  border-top: 1px solid whitesmoke;
   text-align: center;
   font-family: "makinas-4-square";
   font-weight: bolder;
@@ -142,65 +130,60 @@ td{
 .nineo{
   position: absolute;
   left: 0;
-  top: 81px;
+  top: 80px;
 }
 .ninet{
   position: absolute;
   left: 0;
-  top: 261px;
+  top: 260px;
 }
 .teno{
   position: absolute;
   left: 0;
-  top: 441px;
+  top: 440px;
 }
 .tent{
   position: absolute;
   left: 0;
-  top: 621px;
+  top: 620px;
 }
 .eleo{
   position: absolute;
   left: 0;
-  top: 801px;
+  top: 800px;
 }
 .elet{
   position: absolute;
   left: 0;
-  top: 981px;
+  top: 980px;
 }
 .tweo{
   position: absolute;
   left: 0;
-  top: 1161px;
+  top: 1160px;
 }
 .twet{
   position: absolute;
   left: 0;
-  top: 1341px;
+  top: 1340px;
 }
 .thio{
   position: absolute;
   left: 0;
-  top: 1521px;
+  top: 1520px;
 }
 .thit{
   position: absolute;
   left: 0;
-  top: 1701px;
+  top: 1700px;
 }
 .fouo{
   position: absolute;
   left: 0;
-  top: 1881px;
+  top: 1880px;
 }
 .fout{
   position: absolute;
   left: 0;
-  top: 2061px;
-}
-.fivo{
-  position: absolute;
-  left: 0;
-  top: 2241px;
+  top: 2060px;
 }
