旅行同好会完成

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -71,4 +71,10 @@
             <p class="circle_p_name">スプラ同好会</p>
             <a href="/supuradoukoukai">bbbbb</a>
         </div>
+        <div class="circle_name">
+        <p class="circle_p_name">旅行同好会</p>
+        <a href="/ryokoudoukoukai"><img src="/assets/images/circle/ryokou.png" class="circle-img"></a>
     </div>
+    
+    
+        </div>
