高校入試完成開催場所わからない

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -74,7 +74,11 @@
         <div class="circle_name">
         <p class="circle_p_name">旅行同好会</p>
         <a href="/ryokoudoukoukai"><img src="/assets/images/circle/ryokou.png" class="circle-img"></a>
-    </div>
+        </div>
+        <div class="circle_name">
+        <p class="circle_p_name">高校入試</p>
+        <a href="/koukounyuusi"><img src="/assets/images/circle/koukounyuusi.png" class="circle-img"></a>
+        </div>
     
     
         </div>
