--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -1,17 +1,17 @@
 <link rel="stylesheet" href="/assets/css/timetable.css">
 <h1 class="time-midasi">TIME TABLE</h1>
       <div class="time-first">
-        <div class="line nineo"></div>
+        <div class="line nineo">9:00</div>
         <div class="line ninet"></div>
-        <div class="line teno"></div>
+        <div class="line teno">10:00</div>
         <div class="line tent"></div>
-        <div class="line eleo"></div>
+        <div class="line eleo">11:00</div>
         <div class="line elet"></div>
-        <div class="line tweo"></div>
+        <div class="line tweo">12:00</div>
         <div class="line twet"></div>
-        <div class="line thio"></div>
+        <div class="line thio">13:00</div>
         <div class="line thit"></div>
-        <div class="line fouo"></div>
+        <div class="line fouo">14:00</div>
         <div class="line fout"></div>
         <table class="time-table">
           <tr>
