--- a/views/access.erb
+++ b/views/access.erb
@@ -19,7 +19,7 @@
     </iframe>
   </div>
 
-<div class="buttons">
+<%# <div class="buttons">
   <div class="button" id="button_bus" onclick="button_pushed('bus')">
     <span>バス</span>
   </div>
@@ -75,7 +75,7 @@
 <div class="each-train"><img src="/assets/images/IMG_3853.jpg" class="access-image">
 <p class="access-text">道なりです</p></div>
 <div class="each-train"><img src="/assets/images/IMG_3852.png" class="access-image">
-<p class="access-text">矢印のところが通用門です</p>
+<p class="access-text">矢印のところが通用門です</p> %>
 
  </div>
   
