--- a/views/access.erb
+++ b/views/access.erb
@@ -1,9 +1,8 @@
 <script src="/assets/javascript/access.js"></script>
 
-<div class="accessmain">
-  <div class="access-main">
-  <img src="/assets/images/access.png" class="title-img">
-  </div>
+  <div class="title-main">
+    <img src="/assets/images/titles/access.webp" class="title-img">
+    </div>
   <ul style="text-align:center" class="access-text">
       <li>阪急電鉄「甲陽園」駅下車、徒歩約20分</li>
       <li>阪急/阪神バス「柏堂町」駅下車、南へ徒歩約5分</li>
