--- a/views/map.erb
+++ b/views/map.erb
@@ -13,6 +13,9 @@
         }
     </style>
     <link rel="stylesheet" href="/assets/css/map.css">
+    <div class="title-main">
+    <img src="/assets/images/titles/map.webp" class="title-img">
+    </div>
     <div class="map-main">
         <h1 class="map-title">校内地図</h1>
         <div class="map">
