--- a/views/message.erb
+++ b/views/message.erb
@@ -10,7 +10,7 @@
       })(document);
     </script>
 <div class="message-main">
-  <img src="/assets/images/messages.png" class="title-img">
+  <img src="/assets/images/titles/message.webp" class="title-img">
 </div>
 <div class="messagemain">
   <div class="message">
