--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -1,5 +1,17 @@
 <link rel="stylesheet" href="/assets/css/timetable.css">
-<h1 class="time-midasi">TIME TABLE</h1>
+<script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
+<div class="title-main">
+    <img src="/assets/images/titles/timetable.webp" class="title-img">
+</div>
       <div class="time-first">
         <div class="line nineo">9:00</div>
         <div class="line ninet"></div>
