--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,3 +1,6 @@
+<div class="title-main">
+    <img src="/assets/images/titles/circles.webp" class="title-img">
+</div>
     <div class="container">
         <div class="circle_name">
             <p class="circle_p_name">PC同好会</p>
