--- a/views/index.erb
+++ b/views/index.erb
@@ -12,8 +12,8 @@
       <div class="image">
       <img src="/assets/images/logo.png" class="logo">
     </div>
-      <div id="particles-js">
-      </div>
+      <%# <div id="particles-js">
+      </div> %>
       <script src="/assets/javascript/particles.js"></script>
       <script src="/assets/javascript/javascript.js"></script>
       </div>
