--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -54,42 +54,28 @@
   background-color: rgba(0,255,255,0.765);
   border: 1px solid rgba(0, 0, 0, 0);
   position: relative;
-  width :13%;
-  /* background: linear-gradient(rgba(10,60,180,1),rgba(10,60,180,0)); */
-  background: linear-gradient(45deg, rgba(10,60,180,0.75) 50%,rgba(10,60,180,0.05) );
-  color:white;
+  width :13%
 }
 .time-event-left {
-  /* border-radius: 20px; */
+  border-radius: 20px;
   font-size: 12px;
   font-weight: bolder;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0,255,255,0.765);
   position: relative;
-  width :13%;
-  background: linear-gradient(45deg, rgba(10,60,180,0.75) 50%,rgba(10,60,180,0.05) );
-  color:white;
-    /* border-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px #0fa,
-      0 0 151px #0fa; */
+  width: 13%;
 }
 .time-title{
   text-align: center;
-  /* background-color:whitesmoke; */
+  background-color:whitesmoke;
   font-size: 20px;
   height:60px;
   width:150px;
-  /* border-radius: 30px; */
+  border-radius: 30px;
   font-weight: bolder;
   font-family: "makinas-4-square";
   z-index: 2;
-color:white;
+
 }
 .positionsticky{
   position: sticky;
@@ -125,6 +111,7 @@ td{
   left: 0;
   padding: 5px;
   font-size: 7px;
+  font-family: "makinas-4-square";
 }
 .time-end{
   position: absolute;
@@ -132,6 +119,7 @@ td{
   right: 0;
   padding: 5px;
   font-size: 7px;
+  font-family: "makinas-4-square";
 }
 .line{
   width: 100%;
