--- a/views/index.erb
+++ b/views/index.erb
@@ -37,20 +37,23 @@
      ご不明な点がございましたら、受付でお尋ねください。 
     </li>
   </ul>
-  <h1>呼び出し・問い合わせ</h1>
+  <h1>お手洗い</h1>
   <ul>
-    <li>      
-    </li>
+    <li> 男性用お手洗いは南館全階西側、北館二、四階および講堂にございます。 </li>
+    <li> 女性用お手洗いは南館全階東側、北館三階および講堂、ピロティにございます。 </li>
+    <li> 北館一階のお手洗いは教職員・来賓専用のため、ご利用になれません。 </li>
   </ul>
-  <h1>呼び出し・問い合わせ</h1>
+  <h1>金券販売</h1>
   <ul>
-    <li>      
-    </li>
+    <li> 食堂を除きすべての販売は金券を通して行います。現金はご利用いただけません。 </li>
+    <li> 食堂では食券をお買い求めください。金券はご利用いただけません。 </li>
+    <li> 未使用の金券の払い戻しは、金券販売所にて、14時20分から15時20分に行います。 </li>
   </ul>
-  <h1>呼び出し・問い合わせ</h1>
+  <h1>そのほか</h1>
   <ul>
-    <li>      
-    </li>
+    <li>校内は全面禁煙です。喫煙はお控えください。</li>
+    <li>講堂、校舎には、上履きに履き替えてご入場ください。</li>
+    <li>講堂では携帯電話等の電源をお切りください。</li>
   </ul>
 </div>
 
