--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/layout.css">
-
+    <script src="/assets/javascript/javascript.js">
     <link rel="fonr" href="/assets/fonts/def/fgm.ttf">
     <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
