--- a/views/index.erb
+++ b/views/index.erb
@@ -8,14 +8,14 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
       })(document);
     </script>
+    <script src="/assets/javascript/javascript.js"></script>
     <div id="wrapper">
       <div class="image">
       <img src="/assets/images/logo.png" class="logo">
     </div>
       <%# <div id="particles-js">
       </div> %>
-      <script src="/assets/javascript/particles.js"></script>
-      <script src="/assets/javascript/javascript.js"></script>
+      <%# <script src="/assets/javascript/particles.js"></script> %>
       </div>
 <div class="index-main">
     <div class="date">
