--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <div id="loader">
-      <div class="spinner">
-        <div class="cube1"><img src="/assets/images/logo.png" class="loadimg" ></div>
-        <div class="cube2"></div>
-      </div>
-  </div>
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="/assets/css/access.css">
     <link rel="stylesheet" href="/assets/css/circle.css">
     <link rel="stylesheet" href="/assets/css/message.css">
-
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/layout.css">
-    <script src="/assets/javascript/javascript.js">
     <link rel="fonr" href="/assets/fonts/def/fgm.ttf">
     <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
@@ -28,7 +19,12 @@
   </head>
 
   <body>
-
+<div id="loader">
+      <div class="spinner">
+        <div class="cube1"><img src="/assets/images/logo.png" class="loadimg" ></div>
+        <div class="cube2"></div>
+      </div>
+  </div>
       <nav class="layout-nav">
           <ul class="layout-ul">
             <li><a href="/">Home</a></li>
@@ -44,23 +40,24 @@
       
         <div class="yield-main">
           <%= yield %>
-        </div>
+        <footer>
+            <img src="/assets/images/logo.png" class="footer-logo">
+            <div id="footer-title">第76回 音楽と展覧の会 "NewERA"</div>
+            <div class="footer-icon">
+                <a class="icon"><i class="fab fa-twitter fa-4x snsicon" href="https://x.com/koyo_onten2023?s=20"></i>
+                <span class="sns-link-text">@koyo_onten2023</span>
+                </a>
+                <a class="icon"><i class="fab fa-instagram fa-4x snsicon"></i>
+                <span class="sns-link-text">koyo.school.fes2023</span>
+                </a>
+            </div>
+            <div class="copy-right">
+              ©2023 甲陽PC同好会
+            </div>
+        </footer>  
+      </body>
       
-     <footer style="background-color: rgb(24, 22, 22);" >
-      <div class="footer_logo_div">
-        <img src="footer_logo.png" alt="" class="footer_logo">
-      </div>
-      <div class="footer_icon_div">
-        <div class="icon">
-          <i class="fab fa-twitter fa-4x" href="https://x.com/koyo_onten2023?s=20"></i>
-        </div>
-        <div class="icon">
-          <i class="fab fa-instagram fa-4x" ></i>
-        </div>
-      </div>
-    </footer>  
-  </body>
-   
+    </div>
 </html>
 
 <script>
