--- a/views/layout.erb
+++ b/views/layout.erb
@@ -54,7 +54,8 @@
             <div class="copy-right">
               ©2023 甲陽PC同好会
             </div>
-        </footer>  
+            </footer>  
+        </div>
       </body>
       
     </div>
