--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,7 @@
         <div class="yield-main">
           <%= yield %>
         <footer>
-            <img src="/assets/images/logo.png" class="footer-logo">
+            <img src="/assets/images/footer2.webp" class="footer-logo">
             <div id="footer-title">第76回 音楽と展覧の会 "NewERA"</div>
             <div class="footer-icon">
                 <a class="icon"><i class="fab fa-twitter fa-4x snsicon" href="https://x.com/koyo_onten2023?s=20"></i>
