--- a/views/map.erb
+++ b/views/map.erb
@@ -21,7 +21,7 @@
         <div class="map">
             <div class="map-image">
                 <div id="map-content1" class="map-content" style="display: block;">
-                <div class="map-"><img src="/assets/images/map/1.webp" class="each-map">
+                <div class="map-"><img src="/assets/images/map/1.webp" class="each-map"></div>
                 </div>
                 
                 
@@ -38,9 +38,9 @@
             <button class="button" onclick="showDiv(4)" id="button4">南4F/北3F</button>
             <button class="button" onclick="showDiv(5)" id="button5">北4F</button>
             <button class="button" onclick="showDiv(6)" id="button6">運動場</button>
+            </div>
         </div>
     </div>
-</div>
 
 
 <script>
