--- a/views/message.erb
+++ b/views/message.erb
@@ -14,7 +14,7 @@
 </div>
 <div class="messagemain">
   <div class="message">
-    <h1 class="message-h1">あいさつ</h1>
+    <h2>あいさつ</h2>
     <p class="message-p" > 日露戦争前夜の1903年、第５回内国勧業博覧会が大阪で開催され
     ました。<br>それまでの同博覧会が物品を集めてＰＲするだけの催しだ
     ったのに対して、<br>第５回では日本初のメリーゴーラウンドや急流す
@@ -24,5 +24,6 @@
     呼ばれる歓楽地として発展しました。<br>今回の音展、生徒たちが選んだテーマは“New ERA”。<br>はたして皆
     さんに“the dawn of a new era”を感じていただけるでしょうか。
     </p>
+    <h2>甲陽学院高等学校校長 今西 昭</h2>
   </div>
 </div>
