--- a/public/assets/css/message.css
+++ b/public/assets/css/message.css
@@ -16,3 +16,10 @@
     font-family: "makinas-4-square";
     color: white;
 }
+.message h2{
+    display: block;
+    width: 80%;
+    font-size: 1.5rem;
+    margin: 20px auto;
+    font-family: "makinas-4-square";
+}
