--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,84 +1,139 @@
 <div class="title-main">
     <img src="/assets/images/titles/circles.webp" class="title-img">
 </div>
-    <div class="container">
-        <div class="circle_name">
-            <p class="circle_p_name">PC同好会</p>
+    <ul class="circle-list">
+        <li class="each-circle">
+            <h3 class="circle_p_name">PC同好会
+            <span>
+            </span>
+            </h3>
             <a href="/pcdoukoukai"></a>
-        </div>
-        <div class="circle-name">
-            <p class="circle_p_name">物理部</p>
+        </li>
+        <li class="circle-name">
+            <h3 class="circle_p_name">物理部
+            <span>
+            </span>
+            </h3>
             <a href="/buturibu"><img src="/assets/images/circle/buturi.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">生物部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">生物部
+            <span>
+            </span>
+            </h3>
             <a href="/seibutubu">bbbbb</a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">化学部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">化学部
+            <span>
+            </span>
+            </h3>
             <a href="/kagakubu"><img src="/assets/images/circle/IMG_8290.jpg" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">地歴部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">地歴部
+            <span>
+            </span>
+            </h3>
             <a href="/tirekibu">bbbbb</a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">天文部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">天文部
+            <span>
+            </span>
+            </h3>
             <a href="/tennmonnbu">bbbbb</a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">将棋部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">将棋部
+            <span>
+            </span>
+            </h3>
             <a href="/shougibu"><img src="/assets/images/circle/shougi.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">美術部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">美術部
+            <span>
+            </span>
+            </h3>
             <a href="/bizyutubu">bbbbb</a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">アンサンブル部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">アンサンブル部
+            <span>
+            </span>
+            </h3>
             <a href="/annsannburubu"><img src="/assets/images/circle/annsannburu.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">ESS部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">ESS部
+            <span>
+            </span>
+            </h3>
             <a href="/essbu">bbbbb <img src="/assets/images/circle/ess.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">写真部</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">写真部
+            <span>
+            </span>
+            </h3>
             <a href="/shasinnbu">bbbbb</a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">文芸部＆図書委員</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">文芸部＆図書委員
+            <span>
+            </span>
+            </h3>
             <a href="/bunngeibutosho"><img src="/assets/images/circle/bunngeitosho.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">数学同好会</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">数学同好会
+            <span>
+            </span>
+            </h3>
             <a href="/sugakudoukoukai"><img src="/assets/images/circle/suugaku.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">軽音同好会</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">軽音同好会
+            <span>
+            </span>
+            </h3>
             <a href="/keionndoukoukai"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">奇術同好会</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">奇術同好会
+            <span>
+            </span>
+            </h3>
             <a href="/kizyutudoukoukai"><img src="/assets/images/circle/kizyutu.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">鉄道同好会</p>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">鉄道同好会
+            <span>
+            </span>
+            </h3>
             <a href="/tetudoudoukoukai">bbbbb</a>
-        </div>
-        </div>
-        <div class="circle_name">
-            <p class="circle_p_name">スプラ同好会</p>
+        </li>
+        </li>
+        <li class="each-circle">
+            <h3 class="circle_p_name">スプラ同好会
+            <span>
+            </span>
+            </h3>
             <a href="/supuradoukoukai">bbbbb</a>
-        </div>
-        <div class="circle_name">
-        <p class="circle_p_name">旅行同好会</p>
+        </li>
+        <li class="each-circle">
+        <h3 class="circle_p_nam
+        e">旅行同好会<span>
+        </span>
+        </h3>
         <a href="/ryokoudoukoukai"><img src="/assets/images/circle/ryokou.png" class="circle-img"></a>
-        </div>
-        <div class="circle_name">
-        <p class="circle_p_name">高校入試</p>
+        </li>
+        <li class="each-circle">
+        <h3 class="circle_p_na
+        me">高校入試<span>
+        </span>
+        </h3>
         <a href="/koukounyuusi"><img src="/assets/images/circle/koukounyuusi.png" class="circle-img"></a>
-        </div>
-    
-    
-        </div>
+        </li>
+    </ul>
